# project-zenith

./: .env.example  .gitignore  CHANGELOG.md  README.md  implementation_plan.md  package-lock.json  package.json
.agents/rules/: accessibility.md  api-contract.md  backend-engineering.md  clean-code.md  dependency-governance.md  error-handling.md  frontend-engineering.md  gecx-engineering.md  monorepo-governance.md  performance-budgets.md  (+4 more)
.artifacts/: task.md
agent/: config.json  deploy.py  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: agent.py  health.py  rooms.py  sessions.py  ws.py
backend/app/core/: config.py
backend/app/models/: responses.py  rooms.py  session.py  websocket.py
backend/app/pipelines/: room_pipeline.py
backend/app/pipelines/prompts/: pipecat_system.xml  sentiment_system.xml
backend/app/services/: ces_client.py  chat_handler.py  connection_manager.py  gcs_client.py  redis_client.py  session_store.py
backend/tests/: test_agent.py  test_ces_client.py  test_health.py  test_pipelines.py  test_rooms.py  test_session_store.py  test_structure.py  test_websocket.py
frontend/: .dockerignore  .lint-output.txt  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  test-lk.js  vitest.config.ts  vitest.setup.ts
gecx_agent/: README.md  bootstrap.py
scripts/: bootstrap_gecx.py  deploy-app.sh  deploy-dev.sh  deploy-gecx.sh  deploy-prod.env  deploy-prod.env.example  deploy-prod.sh  teardown-app.sh  teardown-dev.sh  teardown-prod.sh
(+69 files in other folders)
