[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-auth>=2.0.0",
    "google-cloud-ces>=0.1.0",
    "httpx>=0.28.1",
    "livekit-api>=1.1.0",
    "pipecat-ai[google,livekit]>=1.0.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
